--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -250,8 +250,10 @@
           <li>
             <a href="#">Ações</a>
             <div class="submenu">
-              <a href="{% url 'add_conteudo'%}">Adicionar Conteúdo</a>
-              <a href="{% url 'add_questionario'%}">Adicionar Questionário</a>
+              <a href="{% url 'gerenciar_conteudos'%}">Gerenciar Conteúdo</a>
+              <a href="{% url 'gerenciar_questionarios'%}"
+                >Gerenciar Questionário</a
+              >
             </div>
           </li>
           <li><a href="#contato">Contato</a></li>
