--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -241,9 +241,6 @@
     <header>
       <div class="header-left">
         <div class="logo">KineBioHub</div>
-        <div class="profile-link">
-          <a href="#perfil"><i class="fas fa-user profile-icon"></i></a>
-        </div>
       </div>
       <nav>
         <ul>
@@ -256,7 +253,7 @@
               >
             </div>
           </li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="{%url 'contato'%}">Contato</a></li>
         </ul>
       </nav>
       <div class="header-right">
@@ -272,9 +269,6 @@
     <header>
       <div class="header-left">
         <div class="logo">KineBioHub</div>
-        <div class="profile-link">
-          <a href="#perfil"><i class="fas fa-user profile-icon"></i></a>
-        </div>
       </div>
       <nav>
         <ul>
@@ -291,7 +285,7 @@
               <a href="{% url 'analise_movimento'%}">Análise do Movimento</a>
             </div>
           </li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="{%url 'contato'%}">Contato</a></li>
         </ul>
       </nav>
       <div class="header-right">
