--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -239,17 +239,19 @@
             </p>
           </div>
           <div class="feature-item">
-            <img src="{% static "admin/img/cerebro.jpg" %}" alt="Imagem de Cérebro">
+            <img src="{% static "admin/img/cerebro.jpg" %}" alt="Imagem de
+            Cérebro">
             <h3>Diversidade de Conteúdos</h3>
             <p>Acesse uma ampla variedade de materiais didáticos</p>
           </div>
           <div class="feature-item">
-            <img
-              src="{% static "admin/img/professor.jpg" %}"
-              alt="Imagem de Professor"
-            />
+            <img src="{% static "admin/img/professor.jpg" %}" alt="Imagem de
+            Professor" />
             <h3>Para Estudantes e Professores</h3>
-            <p>Recursos personalizados para apoiar tanto estudantes quanto professores em suas jornadas educacionais</p>
+            <p>
+              Recursos personalizados para apoiar tanto estudantes quanto
+              professores em suas jornadas educacionais
+            </p>
           </div>
         </div>
       </section>
