--- a/app/templates/add_questionario.html
+++ b/app/templates/add_questionario.html
@@ -40,7 +40,7 @@
       }
 
       input[type="number"] {
-        width: 60px; /* Largura ajustada para o campo de número */
+        width: 60px; 
       }
 
       button {
@@ -55,7 +55,7 @@
       }
 
       button:hover {
-        background-color: #218838; /* Cor ao passar o mouse */
+        background-color: #218838; 
       }
 
       .pergunta-container {
@@ -63,7 +63,7 @@
         padding: 15px;
         border: 1px solid #ddd;
         border-radius: 5px;
-        background-color: #f9f9f9; /* Cor de fundo das perguntas */
+        background-color: #f9f9f9; 
       }
 
       .alternativa {
@@ -72,7 +72,7 @@
       }
 
       .alternativa input[type="radio"] {
-        margin-right: 5px; /* Espaço entre o rádio e o texto */
+        margin-right: 5px; 
       }
     </style>
   </head>
