--- a/app/templates/editar_questionario.html
+++ b/app/templates/editar_questionario.html
@@ -147,8 +147,8 @@
                     const input = alternativa.querySelector('input[type="radio"]');
                     if (input) {
                         input.addEventListener('change', function() {
-                            // Atualiza a alternativa correta quando uma alternativa é selecionada
-                            alternativaCorretaSelect.value = input.value; // Atualiza o valor do select da alternativa correta
+                            
+                            alternativaCorretaSelect.value = input.value; 
                         });
                     }
                 });
