--- a/app/templates/gerenciar_questionarios.html
+++ b/app/templates/gerenciar_questionarios.html
@@ -37,14 +37,14 @@
         cursor: pointer;
       }
       button:hover {
-        background-color: #c82333; /* Cor ao passar o mouse */
+        background-color: #c82333; 
       }
       .edit-button {
         background-color: #007bff;
         margin-right: 5px;
       }
       .edit-button:hover {
-        background-color: #0069d9; /* Cor ao passar o mouse */
+        background-color: #0069d9; 
       }
     </style>
   </head>
